--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
+    max-height: 90vh;
+    padding-right: 5vw;
+    padding-top: 5vh;
+}
+
+.footer {
+    display: flex;
     align-items: center;
-    min-height: 100vh;
+    justify-content: flex-end;
+    padding-right: 5vw;
 }
